# sst-template-cli

./: .gitignore  index.js  package.json  tsconfig.json  tsup.config.ts
Rust/cli_tool/: Cargo.toml
Rust/cli_tool/src/: main.rs
src/: constants.ts  index.ts
src/presets/astro/: package.json
src/presets/base-sst/: package.json  sst.config.ts  tsconfig.json
src/presets/base-sst/stacks/: ApiStack.ts  WebStack.ts
src/presets/base-sst/stacks/utils/: constants.ts
src/presets/next/default/: package.json
src/util/: fsutils.ts
