[package]
name = "cli_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.1.10"
indicatif = "0.17.5"
once_cell = "1.18.0"
textwrap = "0.16.0"
zeroize = {version = "1.6.0", features = ["derive"]}
console = "0.15.8"
git2 = "0.18.1"
auth-git2 = "0.5.3"
